--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,5 +1,6 @@
 .app.light {
     --bg-color: #E8E8EA;
+    --inverted-bg-color: #090949;
 
     --primary-color: #0232C2;
     --secondary-color: #0449E0;
