Added AppLink UI component

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -4,4 +4,6 @@
 
     --primary-color: #049604;
     --secondary-color: #04FF04;
+    --inverted-primary-color: #0232C2;
+    --inverted-secondary-color: #0452FF;
 }
