--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -4,4 +4,6 @@
 
     --primary-color: #0232C2;
     --secondary-color: #0449E0;
+    --inverted-primary-color: #049604;
+    --inverted-secondary-color: #04FF04;
 }
