Added Stylelint, fixed scss files

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,14 +1,12 @@
-@import "src/app/styles/reset";
-@import "src/app/styles/variables/global";
-@import "src/app/styles/themes/light";
-@import "src/app/styles/themes/dark";
+@import "reset";
+@import "./variables/global";
+@import "./themes/light";
+@import "./themes/dark";
 
 .app {
     font: var(--font-m);
-
     background: var(--bg-color);
     color: var(--primary-color);
-
     min-height: 100vh;
 
     .content-page {
@@ -20,4 +18,3 @@
         }
     }
 }
-
