--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,9 +1,8 @@
 .app.dark {
     --bg-color: #090949;
-    --inverted-bg-color: #E8E8EA;
-
+    --inverted-bg-color: #e8e8ea;
     --primary-color: #049604;
-    --secondary-color: #04FF04;
-    --inverted-primary-color: #0232C2;
-    --inverted-secondary-color: #0452FF;
+    --secondary-color: #04ff04;
+    --inverted-primary-color: #0232c2;
+    --inverted-secondary-color: #0452ff;
 }
