--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,9 +1,8 @@
 .app.light {
-    --bg-color: #E8E8EA;
+    --bg-color: #e8e8ea;
     --inverted-bg-color: #090949;
-
-    --primary-color: #0232C2;
-    --secondary-color: #0449E0;
+    --primary-color: #0232c2;
+    --secondary-color: #0449e0;
     --inverted-primary-color: #049604;
-    --inverted-secondary-color: #04FF04;
+    --inverted-secondary-color: #04ff04;
 }
