--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -6,22 +6,67 @@
     transition: width 0.3s;
 }
 
-.collapsed {
-    width: var(--sidebar-width-collapsed);
-}
-
 .switchers {
     position: absolute;
     bottom: 20px;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
     width: 100%;
     gap: 5px;
+
+    // flex-wrap: wrap;
 }
 
 .collapseBtn {
     position: absolute;
     right: -40px;
     bottom: 40px;
+}
+
+.linksContainer {
+    margin-top: 20px;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.link {
+    margin-left: 10px;
+    opacity: 1;
+    transition: 0.2s opacity;
+}
+
+.item {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.icon {
+    fill: var(--inverted-primary-color);
+}
+
+.collapsed {
+    width: var(--sidebar-width-collapsed);
+
+    .switchers {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .linksContainer {
+        align-items: center;
+    }
+
+    .link {
+        opacity: 0;
+        width: 0;
+        height: 20px;
+    }
+
+    .item {
+        margin-top: 15px;
+    }
 }
