--- a/src/shared/ui/Modal/ui/ModalLayout.module.scss
+++ b/src/shared/ui/Modal/ui/ModalLayout.module.scss
@@ -31,7 +31,7 @@
     border: 1px solid;
     background: var(--bg-color);
     box-sizing: border-box;
-    border-radius: 12px;
+    // border-radius: 12px;
     overflow: auto;
     z-index: 3;
     min-width: 400px;
