--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -14,11 +14,11 @@
     width: 80%;
     color: var(--primary-color);
 
-    // border: none;
-    // outline: none;
-    // width: 100%;
-
     &:focus {
         outline: none;
     }
+}
+
+.readonly {
+    opacity: 0.7;
 }
