--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -25,6 +25,12 @@
     background: none;
 }
 
+.outlineRed {
+    border: 1px solid var(--red-light);
+    color: var(--red-dark);
+    background: none;
+}
+
 .background {
     background: var(--bg-color);
     color: var(--primary-color);
