--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,4 +5,8 @@
     --secondary-color: #049604;
     --inverted-primary-color: #0232c2;
     --inverted-secondary-color: #0452ff;
+
+    // skeleton
+    --skeleton-shadow: #1515ad;
+    --skeleton-color: #2b2be8;
 }
