--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -5,4 +5,8 @@
     --secondary-color: #0449e0;
     --inverted-primary-color: #04ff04;
     --inverted-secondary-color: #049604;
+
+    // skeleton
+    --skeleton-shadow: grey;
+    --skeleton-color: rgba(0 0 0 / 20%);
 }
