--- a/src/app/styles/themes/orange.scss
+++ b/src/app/styles/themes/orange.scss
@@ -5,4 +5,8 @@
     --secondary-color: #d01f0e;
     --inverted-primary-color: #dbd5dc;
     --inverted-secondary-color: #faf4fb;
+
+    // skeleton
+    --skeleton-shadow: grey;
+    --skeleton-color: rgba(0 0 0 / 20%);
 }
