--- a/src/entities/Article/ui/ArticleImageBlockComponent/ArticleImageBlockComponent.module.scss
+++ b/src/entities/Article/ui/ArticleImageBlockComponent/ArticleImageBlockComponent.module.scss
@@ -1,3 +1,7 @@
-.ArticleImageBlockComponent {
-    // todo
+.articleImageBlockComponent {
+    text-align: center;
+}
+
+.img {
+    max-width: 100%;
 }
