--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -22,7 +22,7 @@
             padding: 20px 20px 20px 45px;
             height: calc(100vh - var(--navbar-height));
             overflow-y: auto;
-            width: 100%;
+            width: calc(100% - var(--sidebar-width-collapsed));
         }
     }
 }
