--- a/src/pages/ProfilePage/ui/ProfilePageHeader/ProfilePageHeader.module.scss
+++ b/src/pages/ProfilePage/ui/ProfilePageHeader/ProfilePageHeader.module.scss
@@ -3,10 +3,10 @@
     margin-bottom: 20px;
 }
 
-.editBtn {
-    margin-left: auto;
-}
-
 .cancelBtn {
     margin-left: 10px;
+}
+
+.btnWrapper {
+    margin-left: auto;
 }
