--- a/src/entities/Article/ui/ArticleList/ArticleList.module.scss
+++ b/src/entities/Article/ui/ArticleList/ArticleList.module.scss
@@ -8,10 +8,5 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-
-    .card {
-        margin-left: 15px;
-        margin-right: 15px;
-        margin-bottom: 30px;
-    }
+    gap: 30px;
 }
