Added article recommendations.

--- a/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
+++ b/src/pages/ArticleDetailsPage/ui/ArticleDetailsPage/ArticleDetailsPage.module.scss
@@ -1,7 +1,15 @@
 .articleDetailsPage {
-    min-height: 100%;
+    min-height: 500px;
 }
 
 .commentTitle {
     margin-top: 20px;
+}
+
+.recommendations {
+    margin-top: 20px;
+    flex-wrap: nowrap;
+    overflow-y: hidden;
+    overflow-x: auto;
+    justify-content: unset;
 }
