--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -6,11 +6,12 @@
     align-items: center;
     padding: 20px;
 
+    .appName {
+        width: var(--sidebar-width);
+        margin-left: 15px;
+    }
+
     .links {
         margin-left: auto;
-
-        .mainLink {
-            margin-right: 10px;
-        }
     }
 }
