--- a/src/shared/ui/Skeleton/Skeleton.module.scss
+++ b/src/shared/ui/Skeleton/Skeleton.module.scss
@@ -16,6 +16,13 @@
         background: linear-gradient(to right, transparent 0%, var(--skeleton-color) 50%, transparent 100%);
         animation: load 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
     }
+
+    &.noAnimation {
+        &::before {
+            animation: unset;
+            background: none;
+        }
+    }
 }
 
 @keyframes load {
