--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -13,6 +13,9 @@
     min-width: 150px;
     width: 80%;
     color: var(--primary-color);
+    text-overflow: ellipsis;
+    padding-left: 5px;
+    padding-right: 5px;
 
     &:focus {
         outline: none;
