--- a/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -5,7 +5,6 @@
 }
 
 .item {
-    margin-top: 5px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -23,6 +22,6 @@
     }
 
     .item {
-        margin-top: 15px;
+        height: var(--font-line-m);
     }
 }
