Added stories for ListBox.

--- a/src/shared/ui/ListBox/ListBox.module.scss
+++ b/src/shared/ui/ListBox/ListBox.module.scss
@@ -23,6 +23,14 @@
     &.top {
         bottom: 100%;
     }
+
+    &.bottom {
+        top: 100%;
+    }
+}
+
+.noLabel {
+    left: unset;
 }
 
 .item {
