--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -11,7 +11,12 @@
         margin-left: 15px;
     }
 
-    .links {
+    .links,
+    .dropdown {
         margin-left: auto;
+    }
+
+    .loginName {
+        margin-left: 5px;
     }
 }
