Moved all z-index to global.scss.

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -24,6 +24,12 @@
 
     // z-indexes
     --modal-z-index: 10;
+    --dropdown-menu-z-index: 10;
+    --listbox-options-z-index: 10;
+    --modal-layout-container-z-index: 1;
+    --modal-layout-overlay-z-index: 2;
+    --modal-layout-content-z-index: 3;
+    --sidebar-collapse-btn-z-index: 100;
 
     // Colors
     --overlay-color: rgba(0 0 0 / 60%);
