--- a/src/shared/ui/Dropdown/Dropdown.module.scss
+++ b/src/shared/ui/Dropdown/Dropdown.module.scss
@@ -14,7 +14,7 @@
 .menu {
     background: var(--card-bg);
     position: absolute;
-    z-index: 10;
+    z-index: var(--dropdown-menu-z-index);
     border-radius: 8px;
     border: 1px solid var(--primary-color);
     display: flex;
