--- a/src/shared/ui/ListBox/ListBox.module.scss
+++ b/src/shared/ui/ListBox/ListBox.module.scss
@@ -17,7 +17,7 @@
 
 .options {
     position: absolute;
-    z-index: 10;
+    z-index: var(--listbox-options-z-index);
     background: var(--listbox-bg);
     border-radius: 12px;
     box-shadow: 4px 4px 8px var(--listbox-bg);
