--- a/src/shared/ui/Modal/ui/ModalLayout.module.scss
+++ b/src/shared/ui/Modal/ui/ModalLayout.module.scss
@@ -10,7 +10,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 1;
+    z-index: var(--modal-layout-container-z-index);
 }
 
 .overlay {
@@ -22,7 +22,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: 2;
+    z-index: var(--modal-layout-overlay-z-index);
     cursor: pointer;
 }
 
@@ -32,8 +32,7 @@
     background: var(--bg-color);
     box-sizing: border-box;
     overflow: auto;
-    z-index: 3;
-    min-width: 400px;
+    z-index: var(--modal-layout-content-z-index);
     min-width: 600px;
     max-width: 70vw;
 
