--- a/src/shared/ui/Popups/ui/ListBox/ListBox.module.scss
+++ b/src/shared/ui/Popups/ui/ListBox/ListBox.module.scss
@@ -1,5 +1,4 @@
-.listbox {
-    position: relative;
+.listBox {
     display: flex;
     align-items: center;
 }
@@ -58,14 +57,6 @@
 
 .item {
     padding: 10px 20px;
-}
-
-.active {
-    background: var(--inverted-primary-color);
-}
-
-.disabled {
-    opacity: 0.7;
 }
 
 .label {
