--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -12,11 +12,7 @@
     }
 
     .links,
-    .dropdown {
+    .actions {
         margin-left: auto;
-    }
-
-    .loginName {
-        margin-left: 5px;
     }
 }
