--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -31,7 +31,8 @@
     --modal-layout-overlay-z-index: 2;
     --modal-layout-content-z-index: 3;
     --sidebar-collapse-btn-z-index: 100;
-    --overlay-z-index: -1;
+    --overlay-z-index: 99;
+    --drawer-z-index: 100;
 
     // Colors
     --overlay-color: rgba(0 0 0 / 60%);
