--- a/src/shared/ui/Icon/Icon.module.scss
+++ b/src/shared/ui/Icon/Icon.module.scss
@@ -1,6 +1,9 @@
 .icon {
     fill: var(--primary-color);
-    display: flex;
+}
+
+.secondary {
+    fill: var(--secondary-color);
 }
 
 .inverted {
