--- a/src/shared/ui/Icon/Icon.module.scss
+++ b/src/shared/ui/Icon/Icon.module.scss
@@ -1,11 +1,14 @@
 .icon {
     fill: var(--primary-color);
+    color: var(--primary-color);
 }
 
 .secondary {
     fill: var(--secondary-color);
+    color: var(--secondary-color);
 }
 
 .inverted {
     fill: var(--inverted-primary-color);
+    color: var(--inverted-primary-color);
 }
